--- a/index.css
+++ b/index.css
@@ -6,23 +6,20 @@ body{
 #div1 {
     height: 100px;
     text-align: center;
-    flex-grow: 1;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    margin-bottom: 10px;
 }
 
-#div2 {
-    height: 400px;
-    overflow-y: auto;
-    flex-grow: 2;
-}
 
 #div3 {
     text-align: center;
-    height: 100px;
-    flex-grow: 1;
+    height: 6.25rem;
 }
 #addtodo{
     width: 350px;
-    height: 40px;
+    height: 35px;
     border-radius: 5px;
     border: none;
 }
