--- a/index.css
+++ b/index.css
@@ -4,12 +4,12 @@ body{
 }
 
 #div1 {
-    height: 100px;
+    height: 6.25rem;
     text-align: center;
     position: sticky;
     top: 0;
     z-index: 1000;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 
 
@@ -18,17 +18,17 @@ body{
     height: 6.25rem;
 }
 #addtodo{
-    width: 350px;
-    height: 35px;
-    border-radius: 5px;
+    width: 21.875rem;
+    height: 2.1875rem;
+    border-radius: 0.313rem;
     border: none;
 }
 
 .addbtn{
-    height: 40px;
-    border-radius: 5px;
+    height: 2.5rem;
+    border-radius: 0.313rem;
     border:none;
-    margin-left: 10px;
+    margin-left: 0.625rem;
     background-color: dodgerblue;
     color: white;
 }
